--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ZauberNerd <zaubernerd@zaubernerd.de>",
   "license": "MIT",
   "scripts": {
-    "release:prepare": "echo 1 > release-ready && git add release-ready && git commit -m \"chore: prepare release\""
+    "release:prepare": "echo 1 > release-ready && git add release-ready && git commit -S -m \"chore: prepare release\""
   },
   "dependencies": {
     "package-json": "4.0.1"
